# chatty

./: LICENSE  out.h  pyproject.toml  setup.py
chatty/: __init__.py
exemples/: exemple.chat
